--- a/mysite/app_blog/templates/app_blog/article_detail.html
+++ b/mysite/app_blog/templates/app_blog/article_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>>{{ item.title }}</title>
+    <title>{{ item.title }}</title>
 </head>
 <body>
 {% load static %}
