--- a/mysite/app_blog/templates/app_blog/article_detail.html
+++ b/mysite/app_blog/templates/app_blog/article_detail.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ item.title }}</title>
-</head>
-<body>
+{% extends 'app_blog/home.html' %}
 {% load static %}
+{% block content %}
+{% spaceless %}
+
 <div>
-    <ol class="breadcrumb">
-        <li><a href="/">Головна</a></li>
-        <li><a href="{% url 'articles-list' %}">Публікації</a></li>
-        <li><a href="{{	item.category.get_absolute_url	}}">{{ item.category|upper }}</a></li>
-        <li>{{ item.title|upper }}</li>
-    </ol>
-    <div>
+    <header class="article-block">
+        <a href="/"><h3>Головна</h3></a>
+        <a href="{% url 'articles-list' %}"><h3>Публікації</h3></a>
+    </header>
+    <div class="articles-row article-block">
         <h3>
             {{ item.title }}
         </h3>
         <h5>
-
             {{ item.pub_date|date:"d E Y"|safe|linebreaks }}
         </h5>
     </div>
-    <div>
+    <div class="articles-row article-block">
         {{ item.description|escape|safe }}
 
         {% if item.images.all %}
@@ -32,5 +26,5 @@
     </div>
     <div class='clearfix'></div>
 </div>
-</body>
-</html>
+{% endspaceless %}
+{% endblock %}
