--- a/mysite/app_blog/templates/app_blog/articles_list.html
+++ b/mysite/app_blog/templates/app_blog/articles_list.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Публікації</title>
-</head>
-<body>
-Публікації <br/>
-
-{% if category %} {{ category }} {% endif %}
+{% extends 'app_blog/home.html' %}
+{% load static %}
+{% block content %}
+{% spaceless %}
+{% if category %}
+<h1 class="logo">Публікації <<{{ category }}>></h1>
+<br/>
+{% endif %}
 
 {% for item in items %}
-<div class="articles-row">
+<div class="articles-row article-block">
     <a href="{{ item.get_absolute_url }}">
         <h4>{{ item.title }}</h4>
     </a>
@@ -23,11 +21,11 @@
     <div class="container-image">
         <img class="img" src="{{ item.images.all.0.image.url }}" alt=""/>
     </div>
-    <div class=‘clearfix’></div>
+    <div class='clearfix'></div>
 </div>
 {% endfor %}
-<div>
-    <a href="/"><- Головна</a>
-</div>
-</body>
-</html>
+<a href="{% url 'home' %}" class="menu-button position">
+    <h4>Головна сторінка</h4>
+</a>
+{% endspaceless %}
+{% endblock %}
