--- a/mysite/app_blog/templates/app_blog/index.html
+++ b/mysite/app_blog/templates/app_blog/index.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Blog</title>
-</head>
-<body>
-Категорії
-{% if categories %}
-{% for item in categories %}
-<div>
-    <a href="{{ item.get_absolute_url }}">
-        <h4>{{ item.category }}</h4>
+{% extends 'app_blog/home.html' %}
+{% load static %}
+{% block content %}
+{% spaceless %}
 
-    </a>
-</div>
-{% endfor %}
+{% if categories %}
+<header>
+    <nav class="navbar position" role="navigation">
+        <div class="container">
+            {% for item in categories %}
+            <a href="{{ item.get_absolute_url }}">
+                <h4>{{ item.category }}</h4>
+            </a>
+            {% endfor %}
+        </div>
+    </nav>
+</header>
 {% endif %}
+
 {% if articles %}
 {% for item in articles %}
-<div>
+<div class="article-block">
     <a href="{{ item.get_absolute_url }}">
         <h4>{{ item.title }}</h4>
     </a>
     <h5>
+
         {{ item.pub_date|date:"j E Y"|safe|linebreaks }}
     </h5>
     <p>
@@ -31,10 +33,8 @@
 </div>
 {% endfor %}
 {% endif %}
-<a href="{% url 'articles-list' %}">
+<a href="{% url 'articles-list' %}" class="menu-button position">
     <h4>Всі публікації</h4>
 </a>
-
-</body>
-
-</html>
+{% endspaceless %}
+{% endblock %}
